# LUTViewer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ViewLib/: CMakeLists.txt  GLMethods.cpp  GLMethods.h  Vectors.h  datatemplate.h
src/: Vectors.h  exampleTree.swc  exampleTree2.swc
src/data/: cell.swc  cell.swc.txt  config.txt  dims.txt
